<resources>
    <string name="app_name" translatable="false">HuKi</string>
</resources>
